--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
     },
-    "author": "",
-    "license": "MIT",
-  
+    "author": {
+        "name": "gunimus",
+        "email": "guminus@overspec.net"
+    },
     "nodecg": {
         "compatibleRange": "^1.0.0",
         "dashboardPanels": [
