--- a/package.json
+++ b/package.json
@@ -1,19 +1,15 @@
 {
-    "name": "rttr_layouts",
+    "name": "rttr-layouts",
     "version": "1.0.0",
     "description": "NodeCG layouts for Road to the Record",
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
     },
-    "author": {
-        "name": "gunimus",
-        "email": "guminus@overspec.net"
-    },
     "license": "ISC",
     "repository": {
         "type": "git",
-        "url": "git+git@github.com:gunimus/rttr_layouts.git"
+        "url": "git+git@github.com:RoadtotheRecord/rttr-layouts.git"
     },
     "nodecg": {
         "compatibleRange": "^1.0.0",
