--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3'
 services:
   nodecg:
     image: ${LAYOUTS_NAME}
+    container_name: ${LAYOUTS_NAME}
     build: 
       context: .
       args:
